<resources>
    <string name="app_name">Sell My Books</string>
    <string name="banner">Sell My Books</string>
    <string name="welcome">Welcome Back</string>
    <string name="sign_in">Sign to continue</string>
    <string name="btn_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="back_btn">back btn</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="already_have_account">Already have account?</string>
    <string name="forgot_password2">We just need your registered Email id to send password reset instruction</string>
    <string name="reset_password">Reset Password</string>
    <string name="lock_image">lock image</string>
    <string name="wel">Welcome</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_my_home_page">MainActivity</string>
    <string name="add_book">Add Book</string>
    <string name="book_name">Book Name</string>
    <string name="short_description">Short Description</string>
    <string name="author_name">Author Name</string>
    <string name="publisher">Publisher</string>
    <string name="price">Price</string>
    <string name="space" />
    <string name="book_name2">Book Name :</string>
    <string name="net_technology">.Net technology</string>
    <string name="description">Description :</string>
    <string name="the_book_covers_n_net_tech_and_c">The book covers:\n.net tech and c#</string>
    <string name="book_price">Book Price:</string>
    <string name="_300">300/-</string>
    <string name="listed_by">Listed By:</string>
    <string name="ankitpatelak2017_gmail_com">ankitpatelak2017@gmail.com</string>
    <string name="learn_more">Learn more</string>
</resources>