<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBook">

    <TextView
        android:id="@+id/txt_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_book"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_abUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/space"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_banner" />

    <TextView
        android:id="@+id/txt_abEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/space"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_abUsername" />

    <EditText
        android:id="@+id/ed_abBookName"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/book_name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/ed_abDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ed_abDescription"
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/short_description"
        android:inputType="textMultiLine"
        android:lines="3"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/ed_abAuthorName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ed_abAuthorName"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/author_name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/ed_abPublisher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ed_abPublisher"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/publisher"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/ed_abPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ed_abPrice"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_addBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_addBook"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_btn_blue"
        android:text="@string/add_book"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>